@@ -1,3 +1,4 @@
+/* $Id$ */
 .asset-directory-browse li{
   float: left;
 	text-align: center;
